--- a/project3-investment-calc/index.html
+++ b/project3-investment-calc/index.html
@@ -8,7 +8,7 @@
       href="/investment-calculator-logo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Investment Calculator</title>
+    <title>Investment Calculator</title>
     <style>
       body {
         display: none;
