--- a/project4-styling/index.html
+++ b/project4-styling/index.html
@@ -18,7 +18,7 @@
     />
   </head>
 
-  <body>
+  <body class="bg-amber-500 bg-fixed bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
