--- a/project6-project-management/index.html
+++ b/project6-project-management/index.html
@@ -14,7 +14,7 @@
 
   <body class="bg-stone-50">
     <div id="modal-root"></div>
-    <div id="root" class="flex pt-8 h-dvh"></div>
+    <div id="root" class="flex pt-1 lg:pt-8 h-dvh"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
