Let the CRUD become your soul

--- a/project6-project-management/index.html
+++ b/project6-project-management/index.html
@@ -10,10 +10,12 @@
         display: none;
       }
     </style>
+    <link rel="preload" href="bootstrap-icons-custom.svg" as="image" type="image/svg+xml" />
   </head>
 
   <body class="bg-stone-50">
     <div id="modal-root"></div>
+    <div id="modal-root-places" class="PlaceWishesContainer"></div>
     <div id="root" class="flex h-dvh"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
