--- a/project6-project-management/index.html
+++ b/project6-project-management/index.html
@@ -10,7 +10,12 @@
         display: none;
       }
     </style>
-    <link rel="preload" href="bootstrap-icons-custom.svg" as="image" type="image/svg+xml" />
+    <link
+      rel="preload"
+      href="bootstrap-icons-custom.svg"
+      as="image"
+      type="image/svg+xml"
+    />
   </head>
 
   <body class="bg-stone-50">
